--- a/vscode-extension/.vscode/tasks.json
+++ b/vscode-extension/.vscode/tasks.json
@@ -2,9 +2,10 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "0.1.0",
-    "command": "tsc",
+    "command": "npm",
     "isShellCommand": true,
-    "args": ["-p", "."],
+    "args": ["run", "compile", "--loglevel", "silent"],
     "showOutput": "silent",
-    "problemMatcher": "$tsc"
+    "isWatching": true,
+    "problemMatcher": "$tsc-watch"
 }
