--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -5,7 +5,7 @@
     "version": "0.0.1",
     "publisher": "typefox",
     "engines": {
-        "vscode": "^1.0.0"
+        "vscode": "^1.8.0"
     },
     "categories": [
         "Languages"
@@ -28,15 +28,16 @@
         }]
     },
     "scripts": {
-        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+        "vscode:prepublish": "tsc -p ./",
+        "compile": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
-        "typescript": "^1.8.5",
-        "vscode": "^0.11.0"
+        "typescript": "^2.1.5",
+        "vscode": "^1.0.0",
+        "@types/node": "^6.0.40"
     },
     "dependencies": {
-        "vscode-languageclient": "^2.2.1"
+        "vscode-languageclient": "^3.0.3"
     }
 }
